RESOLVED FIXED 221795
[GPUP] Test fast/images/animated-image-mp4.html times out when media in GPU Process is enabled
https://bugs.webkit.org/show_bug.cgi?id=221795
Summary [GPUP] Test fast/images/animated-image-mp4.html times out when media in GPU P...
Peng Liu
Reported 2021-02-11 17:53:10 PST
fast/images/animated-image-mp4.html
Attachments
Patch (13.02 KB, patch)
2021-03-08 16:53 PST, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2021-02-18 17:54:43 PST
Peng Liu
Comment 2 2021-03-01 10:56:47 PST
fast/images/animated-image-mp4-crash.html
Peng Liu
Comment 3 2021-03-08 16:53:21 PST
EWS
Comment 4 2021-03-09 10:15:19 PST
Committed r274156: <https://commits.webkit.org/r274156> All reviewed patches have been landed. Closing bug and clearing flags on attachment 422638 [details].
Note You need to log in before you can comment on or make changes to this bug.