Source/WebKit/GPUProcess/media/RemoteImageDecoderAVFProxy.h
@@ -27,6 +27,7 @@
 
 #if ENABLE(GPU_PROCESS) && HAVE(AVASSETREADER)
 
+#include "ColorSpaceData.h"
 #include "DataReference.h"
 #include "MessageReceiver.h"
 #include <WebCore/ImageDecoderAVFObjC.h>
@@ -54,7 +55,7 @@ private:
     void deleteDecoder(const WebCore::ImageDecoderIdentifier&);
     void setExpectedContentSize(const WebCore::ImageDecoderIdentifier&, long long expectedContentSize);
     void setData(const WebCore::ImageDecoderIdentifier&, const IPC::DataReference&, bool allDataReceived, CompletionHandler<void(size_t frameCount, const WebCore::IntSize& size, bool hasTrack, Optional<Vector<WebCore::ImageDecoder::FrameInfo>>&&)>&&);
-    void createFrameImageAtIndex(const WebCore::ImageDecoderIdentifier&, size_t index, CompletionHandler<void(Optional<WTF::MachSendRight>&&)>&&);
+    void createFrameImageAtIndex(const WebCore::ImageDecoderIdentifier&, size_t index, CompletionHandler<void(Optional<WTF::MachSendRight>&&, ColorSpaceData&&)>&&);
 
     void encodedDataStatusChanged(const WebCore::ImageDecoderIdentifier&);
 
